tests/baselines/reference/argumentsObjectIterator02_ES5(target=es5).errors.txt
argumentsObjectIterator02_ES5.ts(5,21): error TS2802: Type 'ArrayIterator<any>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== argumentsObjectIterator02_ES5.ts (1 errors) ====
    function doubleAndReturnAsArray(x: number, y: number, z: number): [number, number, number] {
        let blah = arguments[Symbol.iterator];
    
        let result = [];
        for (let arg of blah()) {
                        ~~~~~~
!!! error TS2802: Type 'ArrayIterator<any>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
            result.push(arg + arg);
        }
        return <[any, any, any]>result;
    }
    
    